# CPTSamD

./: README.md  pyproject.toml  requirements.txt
CPTSamD/: 2025_06_21_fixedshadeincl_singlepfile_hitrate_analysis_False90_1kelectron_straightdown_iniposcheck.py  2025_06_23_multiedit_RUNCODE_Electrons_25_posset_straightdown_LOWERenergy.py  2025_06_23_pickle_gather_single_energy_Electrons_LOW.py  __init__.py  multiedit_RUNCODE_Electrons_25_posset_straightdown_LOWERenergy.py  pickle_gather_single_energy_Electrons_LOW.py  shadeincl_singlepfile_hitrate_analysis_False90_1kelectron_straightdown_iniposcheck.py
CPTSamD/tests/: __init__.py  tests_initial.py
docs/: create_docs.py  docs.md
