[tool.poetry]
name = "cptsamd"
version = "0.0.1"
description = "Charged Particle Trajectory Simulation and analysis in a magnetic Diverter field"
authors = ["Catriana K. Paw U <ckpawu@bu.edu>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/CPU-Cat/CPTSamD"
repository = "https://github.com/CPU-Cat/CPTSamD"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
packages = [
    { include = "CPTSamD" }
]

[tool.poetry.dependencies]
python = "^3.10"
magpylib = "^5.1.1"
numpy = "^1.26"
matplotlib = "^3.8"
scipy = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"